[package]
name = "mikktspace"
version = "1.1.0"
authors = ["Don McCurdy <dm@donmccurdy.com>"]
description = "MikkTSpace vertex tangent calculation, in Web Assembly."
license = "MIT"
repository = "https://github.com/donmccurdy/mikktspace-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
mikktspace = "0.2"
nalgebra = "0.31.0"
# Debug only.
console_error_panic_hook = { version = "0.1" }

[profile.release]
opt-level = 's'
